# cirtesub_stonefish

./: CMakeLists.txt  package.xml
config/: battery_status_simulated.yaml  cirtesub.rviz  leak_sensors_simulated.yaml
data/alpha/: rs1_124_compl.mtl
data/cirtesub/: anclaje_alpha_dch.mtl
launch/: cirtesub_cirtesu.launch.py
scenarios/: cirtesub_cirtesu_arucos.scn
scenarios/cirtesu/: cirtesu_arucos.scn
scenarios/cirtesub/: bluerov2_cirtesu_alpha.scn  cirtesub.scn  cirtesub_alpha copy.scn  cirtesub_alpha.scn
scripts/: ardusim_patch.py  battery_status_simulated.py  dvl_to_twist.py  leak_sensors_simulated.py  odom2tf.py  pressure_to_pose.py
urdf/cirtesu/: cirtesu.urdf.xacro
urdf/cirtesub_description/: cirtesub.urdf
